--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "main": "database.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch app.js "
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
